UI responsiveness for a laptop

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -14,6 +14,7 @@ $gradientLightHover: linear-gradient(180deg, #AAABB5 0%, #55566B 100%);
 $gradientDark: linear-gradient(180deg, #56577C 0%, #2B2C46 100%);
 
 // MEDIA BREAKPOINTS
+$breakpointDasktop: 1600px;
 $breakpointLaptop: 1329px;
 $breakpointTablet: 1023px;
 $breakpointPhone: 767px;
