--- a/src/components/UI/molecules/Card.module.scss
+++ b/src/components/UI/molecules/Card.module.scss
@@ -5,8 +5,14 @@
   height: 350px;
   margin-right: 50px;
   margin-bottom: 50px;
+  
   &:nth-child(4n){
     margin-right: 0;
+  }
+
+  @media only screen and (max-width: $breakpointDasktop){
+    margin-right: 20px;
+    margin-bottom: 20px;
   }
 }
 
