--- a/src/components/UI/molecules/TopBar.module.scss
+++ b/src/components/UI/molecules/TopBar.module.scss
@@ -12,4 +12,14 @@
   min-height: 48px;
   padding: 0 28px;
   background: #322BB0;
+
+  @media only screen and (max-width: $breakpointDasktop){
+    min-height: auto;
+    height: 30px;
+    padding: 0 5px;
+
+    svg {
+      transform: scale(0.7);
+    }
+  }
 }
