--- a/src/components/UI/organisms/Results/CardsList.module.scss
+++ b/src/components/UI/organisms/Results/CardsList.module.scss
@@ -12,4 +12,9 @@
   display: flex;
   flex-wrap: wrap;
   padding-bottom: 40px;
+
+  @media only screen and (max-width: $breakpointDasktop) {
+    width: 1020px;
+    padding-bottom: 50px;
+  }
 }
