--- a/src/components/UI/organisms/Results/ResultsSearch.module.scss
+++ b/src/components/UI/organisms/Results/ResultsSearch.module.scss
@@ -4,4 +4,9 @@
   margin: 95px auto;
   width: 100%;
   max-width: 960px;
+
+  @media only screen and (max-width: $breakpointDasktop){
+    max-width: 600px;
+    margin: 65px auto;
+  }
 }
