--- a/src/components/UI/organisms/Results/CardsList.module.scss
+++ b/src/components/UI/organisms/Results/CardsList.module.scss
@@ -12,9 +12,19 @@
   display: flex;
   flex-wrap: wrap;
   padding-bottom: 40px;
+  min-height: calc(100vh - 300px);
 
   @media only screen and (max-width: $breakpointDasktop) {
     width: 1020px;
     padding-bottom: 50px;
+    min-height: calc(100vh - 230px);
   }
+}
+
+
+.loaderWrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 250px;
 }
